Static analysis tools added and applied

--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -6,4 +6,7 @@
     <style name="BoldPhrase">
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="ColoredPhrase">
+         <item name="android:textColor">#00008B</item>
+    </style>
 </resources>
