--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -3,7 +3,8 @@
         <item name="android:textColor">#960513</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <style name="BoldPhrase">
+    <style name="PhraseReference">
+        <item name="android:textColor">#0000ff</item>
         <item name="android:textStyle">bold</item>
     </style>
 </resources>
