--- a/mobile/res/layout/word_definition_details.xml
+++ b/mobile/res/layout/word_definition_details.xml
@@ -2,20 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
-
-    <ScrollView
+    android:orientation="vertical"
+    android:background="@color/word_definition_details_background">
+    <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:overScrollMode="always"
-        android:background="@color/word_definition_details_background">
-
-        <TextView
+        android:overScrollMode="always" >
+
+        <org.verba.mobile.VerbaTextView
             android:id="@+id/wordDefinitionView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="3dip"
+            android:paddingTop="8dip"
+            android:paddingBottom="16dip"
+            android:paddingLeft="3dip"
+            android:paddingRight="3dip"
+            android:cursorVisible="false"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             android:textColor="@color/word_definition_details_text" />
 
     </ScrollView>
