--- a/mobile/res/layout/phrase_definition_lookup.xml
+++ b/mobile/res/layout/phrase_definition_lookup.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" 
-    android:orientation="vertical">
+    android:layout_height="fill_parent" 
+    android:orientation="vertical"
+    android:background="@color/phrase_definition_details_background">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
@@ -13,7 +14,7 @@
                 android:ems="10"
                 android:hint="@string/wordToFindHint"
                 android:layout_width="0dip"
-                android:singleLine="true" android:layout_weight="1.67"/>
+                android:singleLine="true" android:layout_weight="1"/>
     
             <Button
                 android:id="@+id/lookupButton"
@@ -22,11 +23,11 @@
                 android:text="@string/lookupButtonLabel" />
     
     </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/dictionaryPopulationProgress"
-        style="?android:attr/progressBarStyleHorizontal"
+    
+    <ListView
+        android:id="@+id/phraseSuggestions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dip" android:layout_weight="1">
+    </ListView>
 
 </LinearLayout>
