--- a/mobile/res/layout/phrase_definition_details.xml
+++ b/mobile/res/layout/phrase_definition_details.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:background="@color/phrase_definition_details_background">
+    android:orientation="vertical">
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
