--- a/mobile/res/layout/phrase_definition_details.xml
+++ b/mobile/res/layout/phrase_definition_details.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
     <ScrollView
-        android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:overScrollMode="always" >
-
-        <org.verba.mobile.widget.PhraseDefinitionView
-            android:id="@+id/phraseDefinitionView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dip"
-            android:paddingBottom="16dip"
-            android:paddingLeft="3dip"
-            android:paddingRight="3dip"
-            android:cursorVisible="false"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
-            android:textColor="@color/phrase_definition_details_text"
-            android:textSize="16sp"
-            android:lineSpacingMultiplier="1.2"/>
+        android:overScrollMode="always"
+        android:descendantFocusability="beforeDescendants">
+        
+            <LinearLayout
+                android:id="@+id/phraseDefinitionsShowcase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                />
 
     </ScrollView>
 
