--- a/mobile/res/layout/dictionaries_loader.xml
+++ b/mobile/res/layout/dictionaries_loader.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:orientation="vertical"
-    android:background="@color/phrase_definition_details_background">
+    android:background="@color/phrase_definition_details_background"
+    android:keepScreenOn="true">
     
     <ListView
         android:id="@+id/newDictionaries"
