--- a/mobile/res/values/injection_modules.xml
+++ b/mobile/res/values/injection_modules.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="roboguice_modules">
-        <item>org.verba.mobile.inject.VerbaInjectionModule</item>
+        <item>org.verba.mobile.utils.VerbaInjectionModule</item>
     </string-array>
 </resources>
