--- a/mobile/res/layout/dictionaries_loader.xml
+++ b/mobile/res/layout/dictionaries_loader.xml
@@ -18,16 +18,9 @@
         >
       <Button
           android:id="@+id/loadNewDictionariesButton"
-          android:layout_width="0dip"
-          android:layout_weight="0.5"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/loadNewDictionariesButtonLabel" />
-      
-      <Button
-          android:id="@+id/closeNewDictionariesDialogButton"
-          android:layout_width="0dip"
-          android:layout_weight="0.5"
-          android:layout_height="wrap_content"
-          android:text="@string/closeNewDictionariesDialogButtonLabel" />
+
     </LinearLayout>
 </LinearLayout>
