--- a/mobile/res/layout/menu.xml
+++ b/mobile/res/layout/menu.xml
@@ -20,25 +20,33 @@
         <ImageButton
             android:id="@+id/dictionaryMenuButton"
             android:layout_width="0dip"
-            android:layout_weight="0.33"
+            android:layout_weight="0.25"
             android:layout_height="wrap_content"
             android:background="@drawable/menu_button_border"
             android:src="@drawable/dictionary" />
         
-        <Button
+        <ImageButton
             android:id="@+id/cardsMenuButton"
             android:layout_width="0dip"
-            android:layout_weight="0.33"
+            android:layout_weight="0.25"
             android:layout_height="match_parent"
             android:background="@drawable/menu_button_border"
-            android:text="Cards" />
+            android:src="@drawable/cards" />
+
+        <ImageButton
+            android:id="@+id/dictionariesMenuButton"
+            android:layout_width="0dip"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:background="@drawable/menu_button_border"
+            android:src="@drawable/dictionaries" />
         
-        <Button
+        <ImageButton
             android:id="@+id/settingsMenuButton"
             android:layout_width="0dip"
-            android:layout_weight="0.33"
+            android:layout_weight="0.25"
             android:layout_height="match_parent"
             android:background="@drawable/menu_button_border"
-            android:text="Settings" />
+            android:src="@drawable/settings" />
     </LinearLayout>
 </LinearLayout>
