--- a/mobile/res/layout/text_selection_actions.xml
+++ b/mobile/res/layout/text_selection_actions.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    >
-        <ImageButton
-            android:id="@+id/useSelectionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/use_selection" />
+    android:background="@color/phrase_definition_details_background"
+    android:orientation="horizontal" >
 
+    <ImageButton
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="-4dip"
+        android:layout_marginRight="-4dip"
+        android:layout_marginBottom="-6dip"
+        android:src="@drawable/search" />
+
+    <ImageButton
+        android:id="@+id/useSelectionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="-4dip"
+        android:layout_marginRight="-4dip"
+        android:layout_marginBottom="-6dip"
+        android:src="@drawable/use_selection" />
 </LinearLayout>
