--- a/mobile/res/layout/text_selection_actions.xml
+++ b/mobile/res/layout/text_selection_actions.xml
@@ -22,5 +22,14 @@
         android:layout_marginLeft="-4dip"
         android:layout_marginRight="-4dip"
         android:layout_marginBottom="-6dip"
+        android:src="@drawable/memo" />
+    
+    <ImageButton
+        android:id="@+id/useAsPhraseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="-4dip"
+        android:layout_marginRight="-4dip"
+        android:layout_marginBottom="-6dip"
         android:src="@drawable/use_selection" />
 </LinearLayout>
