Integrated with Sherlock Action Bar (rebuit the app menu) and Drag Sort ListView

--- a/mobile/res/layout/card_sets.xml
+++ b/mobile/res/layout/card_sets.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dslv="http://schemas.android.com/apk/res/org.verba.mobile"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:orientation="vertical"
-    android:background="@color/phrase_definition_details_background">
+    android:background="@color/phrase_definition_details_background" xmlns:app="http://schemas.android.com/apk/res/org.verba.mobile">
     
-    <ListView
+    <!--<ListView
         android:id="@+id/cardSets"
         android:layout_width="fill_parent"
         android:layout_height="0dip" android:layout_weight="1">
-    </ListView>
+    </ListView>-->
+
+    <com.mobeta.android.dslv.DragSortListView
+        android:id="@+id/cardSets"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="3dp"
+        android:layout_margin="3dp"
+        android:dividerHeight="1px"
+        dslv:drag_enabled="true"
+        dslv:collapsed_height="1px"
+        dslv:drag_scroll_start="0.33"
+        dslv:float_alpha="0.6"
+        dslv:slide_shuffle_speed="0.3"
+        dslv:drag_start_mode="onDown"
+        dslv:drag_handle_id="@id/drag_handle"
+        dslv:remove_enabled="true"
+        dslv:remove_mode="clickRemove"
+        dslv:click_remove_id="@id/click_remove" />
 
 </LinearLayout>
