--- a/mobile/res/drawable/menu_button_border.xml
+++ b/mobile/res/drawable/menu_button_border.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-   <solid android:color="#EEEEEE" />
+   <solid android:color="@android:color/transparent" />
    <stroke android:width="1dip" android:color="#A6A6A6"/>
 </shape>
