--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -7,4 +7,15 @@
         <item name="android:textColor">#0000ff</item>
         <item name="android:textStyle">bold</item>
     </style>
+    
+    <style name="VerbaTheme" parent="Theme.Sherlock">
+        <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
+        <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
+        <item name="android:windowBackground">@color/phrase_definition_details_background</item>
+    </style>
+    
+    <style name="Widget.Styled.ActionBar" parent="@style/Widget.Sherlock.ActionBar">
+        <item name="android:displayOptions">showCustom</item>
+        <item name="displayOptions">showCustom</item>
+    </style>
 </resources>
