--- a/mobile/res/drawable/border.xml
+++ b/mobile/res/drawable/border.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-   <solid android:color="#ffffff" />
+   <solid android:color="@color/edit_text_background" />
    <stroke android:width="2dip" android:color="#4fa5d5"/>
 </shape>
