--- a/mobile/res/layout/dictionaries_loader.xml
+++ b/mobile/res/layout/dictionaries_loader.xml
@@ -14,13 +14,14 @@
     
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        >
+        android:layout_height="wrap_content">
+        
       <Button
           android:id="@+id/loadNewDictionariesButton"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
-          android:text="@string/loadNewDictionariesButtonLabel" />
+          android:text="@string/loadNewDictionariesButtonLabel"
+          style="@style/Verba.Button"/>
 
     </LinearLayout>
 </LinearLayout>
