--- a/mobile/res/layout/edit_card.xml
+++ b/mobile/res/layout/edit_card.xml
@@ -5,11 +5,10 @@
     android:background="@color/phrase_definition_details_background"
     android:textColor="@color/phrase_definition_details_text"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        <Spinner
+    
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    
+        <Spinner
             android:id="@+id/cardSetsList"
             android:layout_width="0dip"
             android:layout_height="fill_parent"
@@ -19,7 +18,8 @@
             android:id="@+id/addCardSetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/addCardSetButtonLabel" />
+            android:text="@string/addCardSetButtonLabel"
+            style="@style/Verba.Button"/>
 
     </LinearLayout>
 
@@ -27,8 +27,9 @@
         android:id="@+id/cardPhrase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10" />
-
+        android:ems="10"
+        style="@style/Verba.EditText"/>
+    
     <EditText
         android:id="@+id/cardDefinition"
         android:layout_width="match_parent"
@@ -36,7 +37,8 @@
         android:layout_weight="0.82"
         android:ems="10"
         android:gravity="top"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine"
+        style="@style/Verba.EditText">
 
         <requestFocus />
     </EditText>
@@ -45,6 +47,7 @@
         android:id="@+id/saveCardButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/saveCardButtonLabel" />
+        android:text="@string/saveCardButtonLabel"
+        style="@style/Verba.Button"/>
 
 </LinearLayout>
