--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <style name="KeyPhrase">
         <item name="android:textColor">#960513</item>
         <item name="android:textStyle">bold</item>
@@ -7,8 +7,12 @@
         <item name="android:textColor">#0000ff</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="Verba">
+        <item name="android:textColor">@color/phrase_definition_details_text</item>
+    </style>
     
-    <style name="VerbaTheme" parent="Theme.Sherlock">
+    <style name="Verba.Theme" parent="Theme.Sherlock">
         <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
         <item name="android:windowBackground">@color/phrase_definition_details_background</item>
@@ -17,5 +21,16 @@
     <style name="Widget.Styled.ActionBar" parent="@style/Widget.Sherlock.ActionBar">
         <item name="android:displayOptions">showCustom</item>
         <item name="displayOptions">showCustom</item>
+    </style>
+    
+    <style name="Verba.Button"/>
+    
+    <style name="Verba.EditLine"/>
+    
+    <style name="Verba.EditText">
+        <item name="android:background">@drawable/border</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:layout_margin">10dip</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
     </style>
 </resources>
