--- a/mobile/res/values/styles.xml
+++ b/mobile/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="actionBarStyle">@style/Widget.Styled.ActionBar</item>
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBar</item>
         <item name="android:windowBackground">@color/phrase_definition_details_background</item>
+        <item name="android:textColor">@color/phrase_definition_details_text</item>
     </style>
     
     <style name="Widget.Styled.ActionBar" parent="@style/Widget.Sherlock.ActionBar">
