--- a/mobile/res/layout/menu.xml
+++ b/mobile/res/layout/menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.actionbarsherlock.internal.widget.IcsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menuLayout"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:divider="@drawable/abs__list_divider_holo_dark"
     android:dividerPadding="12dip"
     android:showDividers="middle"
     android:gravity="center_vertical|right"
-    android:background="@drawable/abs__cab_background_top_holo_dark">
+    android:layout_gravity="right">
     
     <LinearLayout
         style="@style/Widget.Sherlock.ActionButton"
