--- a/mobile/res/layout/suggestion_list_item.xml
+++ b/mobile/res/layout/suggestion_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="fill_parent"
     android:background="@drawable/list_item_style">
     
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
+    <TextView 
           android:id="@+id/listItemTitle"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
